--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ p {
     margin-bottom: 30px;
 }
 
+.sectionDisplay.firstContent {
+    margin-top: 150px;
+}
+
 .codeBlock {
     border: 1px solid #dedede;
     border-radius: 8px;
@@ -115,4 +119,24 @@ span[contenteditable="true"] {
 .passwordWrap {
     width: 200px;
     display: flex;
+}
+
+/* debug page */
+.descImg {
+    display: inline-block;
+    width: 400px;
+    margin-bottom: 10px;
+    border: .5px solid black;
+}
+
+.green {
+    color: limegreen;
+}
+
+.red {
+    color: red;
+}
+
+.bigImg {
+    max-width: 100%;
 }
