--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ a {
     color: #308fce;
 }
 
+a.backBtn, a.backBtn:hover {
+    color: #000;
+    text-decoration: none;
+}
+
 p {
     padding: 0;
     margin: 0;
