--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ span[contenteditable="true"]:focus {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10;
 }
 .passwordWrap {
     width: 200px;
